add cmake variable to control the required pcl version
This variable isn't defined in the CMakeLists.txt, but it can be passed
into cmake during the configure step.

--- a/Filters/CMakeLists.txt
+++ b/Filters/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(PCL REQUIRED)
+find_package(PCL ${PCL_REQUIRED_VERSION} REQUIRED)
 
 include_directories(${PCL_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
