add install rules for library and headers

--- a/Filters/CMakeLists.txt
+++ b/Filters/CMakeLists.txt
@@ -19,8 +19,23 @@ set(sources
   vtkPCLVoxelGrid.cxx
   )
 
+set(headers
+  vtkAnnotateOBBs.h
+  vtkPCDReader.h
+  vtkPCLConversions.h
+  vtkPCLEuclideanClusterExtraction.h
+  vtkPCLNormalEstimation.h
+  vtkPCLRadiusOutlierRemoval.h
+  vtkPCLSACSegmentationCircle.h
+  vtkPCLSACSegmentationCylinder.h
+  vtkPCLSACSegmentationLine.h
+  vtkPCLSACSegmentationPlane.h
+  vtkPCLVoxelGrid.h
+  )
+
 if(USE_OPENNI)
   list(APPEND sources vtkPCLOpenNISource.cxx)
+  list(APPEND headers vtkPCLOpenNISource.h)
 endif()
 
 set(deps
@@ -33,7 +48,16 @@ set(library_name vtkPCLFilters)
 
 add_library(${library_name} ${sources})
 target_link_libraries(${library_name} ${deps})
+set_target_properties(${library_name}  PROPERTIES INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
 
+install(TARGETS ${library_name}
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
+
+install(FILES
+  ${headers}
+  DESTINATION include/vtkPCLFilters)
 
 if(VTK_WRAP_PYTHON)
   include_directories(${VTK_PYTHON_INCLUDE_DIR})
