Update list of required VTK libraries to match director's requirements
List of VTK libraries used by directors are visible in [1].

[1] https://github.com/RobotLocomotion/director/blob/master/src/vtk/DRCFilters/CMakeLists.txt#L59-L67

--- a/Filters/CMakeLists.txt
+++ b/Filters/CMakeLists.txt
@@ -38,13 +38,21 @@ if(USE_OPENNI)
   list(APPEND headers vtkPCLOpenNISource.h)
 endif()
 
-set(VTK_LIBRARIES vtkFiltering vtkIO vtkGraphics)
+set(VTK_LIBRARIES
+  vtkInteractionWidgets
+  vtkInteractionStyle
+  vtkRenderingFreeType
+  vtkRenderingCore
+  vtkRendering${VTK_RENDERING_BACKEND}
+  vtkFiltersExtraction
+  vtkFiltersCore
+  vtkCommonCore
+  )
 
 set(deps
   ${PCL_LIBRARIES}
   ${VTK_LIBRARIES}
   )
-
 
 set(library_name vtkPCLFilters)
 
